fix the update related issue and customize the scrollbar

--- a/src/global.css
+++ b/src/global.css
@@ -5,6 +5,17 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+.custom-scrollbar::-webkit-scrollbar {
+  width: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #2ECC71;
+  border-radius: 10px;
+  height: 5px;
+}
+
+
 .btn-primary {
   @apply inline-flex items-center justify-center capitalize lg:text-base lg:px-6 md:px-4 px-3 lg:py-3 py-2 font-medium text-white transition hover:drop-shadow-2xl rounded border-none shadow-xl md:mb-0 bg-[#2ECC71] hover:bg-green-500 duration-700;
 }
@@ -12,5 +23,6 @@
 .btn-secondaryy {
   @apply inline-flex items-center justify-center capitalize lg:text-base lg:px-6 md:px-4 px-3 lg:py-3 py-2 mb-3 font-medium text-black transition hover:drop-shadow-2xl border-none shadow-xl md:mb-0 hover:bg-[#2ECC71] duration-700;
 }
+
 
 
